[package]
name = "interpreter"
version = "0.1.0"
authors = ["Sankha Narayan Guria <sankha93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language = { path = "../language" }

[lib]
name = "interpreter"
path = "src/lib.rs"