[package]
name = "runtime"
version = "0.1.0"
authors = ["Sankha Narayan Guria <sankha93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.3"
language = { path = "../language" }
compiler = { path = "../compiler" }
